service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-swing-tutor-service
  namespace: java-swing-tutor
  labels:
    app: java-swing-tutor-service
spec:
  type: ClusterIP
  ports:
    - port: 8400
      targetPort: 8400
      protocol: TCP
      name: http
  selector:
    app: java-swing-tutor-service
